<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Arduino</string>
    <string name="send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="status_connecting">connecting...</string>
    <string name="status_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="status_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">아두이노 블루투스 연결 </string>

    <!-- Interface -->
    <string name="min">분</string>
    <string name="text00">초 동안 사용하겠습니다.</string>
    <string name="text01">초 동안 사용하셨습니다.</string>
    <string name="text02">PC 잠금을 해제하려면 흔들어 주세요</string>
    <string name="text03"> 번 남았습니다!</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
