<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/status_view"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/min_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textColor="#ff0000"/>
        <TextView
            android:text="@string/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/sec_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:textColor="#ff0000"/>
        <TextView
            android:text="@string/text01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/PushButtonCount"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/text02"
            android:textSize="20sp"
            android:gravity = "center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/pedo_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:text="0"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#0000ff"/>
        <TextView
            android:text="@string/text03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/pedo_count"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_gravity="center"
        android:background="#666"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <EditText
            android:id="@+id/min_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/min_set"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/cnt_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:text="@string/text00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cnt_set"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign"
        android:onClick="mOnClick"/>
</LinearLayout>